# espbrew

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: pages.yml  release.yml
Formula/: espbrew.rb
benches/: espbrew_benchmarks.rs
src/: arduino.rs  circuitpython.rs  esp_idf.rs  espflash_utils.rs  lib.rs  main.rs  micropython.rs  nuttx.rs  platformio.rs  project.rs  rust_nostd.rs  server.rs  tinygo.rs  zephyr.rs
src/cli/: args.rs  mod.rs  url_handler.rs
src/cli/commands/: boards.rs  build.rs  clean.rs  discover.rs  flash.rs  list.rs  mod.rs  monitor.rs  remote_flash.rs  remote_monitor.rs
src/cli/tui/: app.rs  event_loop.rs  events.rs  main_app.rs  mod.rs  tests.rs  ui.rs
src/cli/tui/components/: board_list.rs  build_status.rs  logs.rs  mod.rs
src/config/: app_config.rs  board_types.rs  mod.rs
src/errors/: mod.rs  types.rs
src/espflash_local/: bootloader.rs  flash_data.rs  idf_bootloader.rs  image_format.rs  mod.rs  partition_table.rs
src/gui/: event_handler.rs  main_window.rs  mod.rs
src/gui/adapters/: app_adapter.rs  mod.rs
src/gui/components/: board_list.rs  build_status.rs  component_list.rs  dialogs.rs  log_viewer.rs  mod.rs
src/gui/slint_ui/: main_window.slint
src/models/: board.rs  esp_idf_config.rs  events.rs  flash.rs  mod.rs  monitor.rs  project.rs  responses.rs  server.rs  tui.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/projects/: mod.rs  registry.rs
src/projects/handlers/: arduino.rs  circuitpython.rs  esp_idf.rs  jaculus.rs  micropython.rs  mod.rs  nuttx.rs  platformio.rs  rust_nostd.rs  tinygo.rs  zephyr.rs
src/remote/: discovery.rs  mod.rs
src/security/: mod.rs  url_validator.rs
src/server/: app.rs  mod.rs
src/server/middleware/: logging.rs  mod.rs
src/server/routes/: board_types.rs  boards.rs  flash.rs  health.rs  mod.rs  monitor.rs  static_files.rs  websocket.rs
src/server/services/: board_scanner.rs  flash_service.rs  mdns_service.rs  mod.rs  monitoring_service.rs
src/services/: flash_service.rs  mod.rs
src/ui/: confirmation_dialog.rs  confirmation_dialog.slint  mod.rs
src/utils/: esp_idf_utils.rs  espflash_utils.rs  idf_native.rs  logging.rs  mod.rs
static/: flash.html  index.html
static/config/: boards.html
tests/: ci_println_check.rs  cli_command_tests.rs  cli_unit_tests.rs  end_to_end_integration_tests.rs  error_handling_recovery_tests.rs  espflash_local_tests.rs  hardware_integration_tests.rs  jaculus_handler_tests.rs  logging_integration_tests.rs  mock_hardware.rs  multi_platform_tests.rs  performance_load_tests.rs  phase3_handler_tests.rs  project_handler_tests.rs  test_fixtures.rs
tests/fixtures/arduino_project/: arduino_project.ino  boards.json
tests/fixtures/circuitpython_project/: code.py  requirements.txt
tests/fixtures/jaculus_esp32s3_project/: jaculus.json  main.js
tests/fixtures/jaculus_package_project/: app.js  package.json
tests/fixtures/jaculus_project/: index.js  jaculus.json
tests/fixtures/micropython_project/: boot.py  main.py
tests/fixtures/nuttx_project/: .config  Makefile  hello_main.c
tests/fixtures/platformio_project/: platformio.ini
tests/fixtures/tinygo_esp32s3_project/: go.mod  main.go
tests/fixtures/tinygo_project/: go.mod  main.go
tests/fixtures/zephyr_project/: CMakeLists.txt  prj.conf
web/: app.js  index.html  style.css
web/assets/: app.js  style.css
web/components/: config.html  dashboard.html  flash.html
(+90 files in other folders)
